--- a/Framework/test-output/old/Default suite/classes.html
+++ b/Framework/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.website.testcases.LoginTest</td>
+<td>com.website.testcases.ProjectCreationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestLogin</td>
+<td>Init</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestLoginWithWrongCed</td>
+<td>createProject</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
