--- a/Framework/test-output/old/Default suite/methods.html
+++ b/Framework/test-output/old/Default suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c49fae">  <td>19/08/06 12:16:52</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setupFile</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/08/06 12:16:53</td>   <td>630</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/08/06 12:17:14</td>   <td>21126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLogin()[pri:1, instance:com.website.testcases.LoginTest@52aa2946]">TestLogin</td> 
-  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/08/06 12:17:28</td>   <td>35751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="8df37b">  <td>19/08/06 12:17:29</td>   <td>36212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TestLoginWithWrongCed()[pri:2, instance:com.website.testcases.LoginTest@52aa2946]">TestLoginWithWrongCed</td> 
-  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/08/06 12:17:40</td>   <td>47626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDownMethod</td> 
-<td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
-<tr bgcolor="c49fae">  <td>19/08/06 12:17:40</td>   <td>47999</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.website.testcases.LoginTest@52aa2946]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558922244</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/08/06 18:56:50</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupFile()[pri:0, instance:com.website.testcases.ProjectCreationTest@75f9eccc]">&gt;&gt;setupFile</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/08/06 18:56:51</td>   <td>647</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.website.testcases.ProjectCreationTest@75f9eccc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="8df37b">  <td>19/08/06 18:57:52</td>   <td>61834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProjectCreationTest.Init()[pri:1, instance:com.website.testcases.ProjectCreationTest@75f9eccc]">Init</td> 
+  <td>main@107241811</td>   <td></td> </tr>
+<tr bgcolor="c49fae">  <td>19/08/06 18:57:52</td>   <td>61859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDownMethod(org.testng.ITestResult)[pri:0, instance:com.website.testcases.ProjectCreationTest@75f9eccc]">&lt;&lt;TearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@107241811</td>   <td></td> </tr>
 </table>
